添加menupage接口
